syntax = "proto3";
package feeds.v1beta1;

option go_package = "github.com/bandprotocol/chain/v2/x/feeds/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

// Params is the data structure that keeps the parameters of the feeds module.
message Params {
  option (gogoproto.equal)            = true;  // Use gogoproto.equal for proto3 message equality checks
  option (gogoproto.goproto_stringer) = false; // Disable stringer generation for better control

  // Admin is the address of the admin that is allowed to perform operations on modules.
  string admin = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // AllowableBlockTimeDiscrepancy is the allowed discrepancy (in seconds) between validator price timestamp and
  // block_time.
  int64 allowable_block_time_discrepancy = 2;

  // GracePeriod is the time (in seconds) given for validators to adapt to changing in feed's interval.
  int64 grace_period = 3;

  // MinInterval is the minimum limit of every feeds' interval (in seconds).
  // If the calculated interval is lower than this, it will be capped at this value.
  int64 min_interval = 4;

  // MaxInterval is the maximum limit of every feeds' interval (in seconds).
  // If the calculated interval of a feed is higher than this, it will not be recognized as a supported feed.
  int64 max_interval = 5;

  // PowerStepThreshold is the amount of minimum power required to put feed in the supported list.
  int64 power_step_threshold = 6;

  // MaxSupportedFeeds is the maximum number of feeds supported at a time.
  uint64 max_supported_feeds = 7;

  // CooldownTime represents the duration (in seconds) during which validators are prohibited from sending new prices.
  int64 cooldown_time = 8;

  // MinDeviationBasisPoint is the minimum limit of every feeds' deviation (in basis point).
  int64 min_deviation_basis_point = 9;

  // MaxDeviationBasisPoint is the maximum limit of every feeds' deviation (in basis point).
  int64 max_deviation_basis_point = 10;

  // SupportedFeedsUpdateInterval is the number of blocks after which the supported feeds will be re-calculated.
  int64 supported_feeds_update_interval = 11;
}
